ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracking-app-ingress
  namespace: tracking-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tracking.example.com
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-frontend
                port:
                  number: 80
          - path: /customer
            pathType: Prefix
            backend:
              service:
                name: customer-frontend
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8001
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8003
          - path: /tracking
            pathType: Prefix
            backend:
              service:
                name: tracking-service
                port:
                  number: 8004
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8002
